adding async amd and plugins

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "ci:deploy-resources": "export $(cat .$BRANCH_NAME.env | xargs) && pulumi up --stack $BRANCH_NAME --yes",
-    "ci:preview-resources": "export $(cat .$BRANCH_NAME.env | xargs) && METHOD=preview pulumi preview --stack $BRANCH_NAME",
-    "deploy-resources": "export $(cat .dev.env | xargs) && pulumi up --stack $BRANCH_NAME",
-    "preview-resources": "export $(cat .dev.env | xargs) && METHOD=preview pulumi preview --stack $BRANCH_NAME",
-    "watch-resources": "export $(cat .dev.env | xargs) && pulumi watch --stack $BRANCH_NAME"
+    "ci:preview-resources": "export $(cat .$BRANCH_NAME.env | xargs) && pulumi preview --stack $BRANCH_NAME",
+    "deploy-resources": "export $(cat .$BRANCH_NAME.env | xargs) && pulumi up --stack $BRANCH_NAME",
+    "preview-resources": "export $(cat .$BRANCH_NAME.env | xargs) && pulumi preview --stack $BRANCH_NAME",
+    "watch-resources": "export $(cat .$BRANCH_NAME.env | xargs) && pulumi watch --stack $BRANCH_NAME"
   },
   "dependencies": {
     "@pulumi/pulumi": "^2.0.0",
